force-app/main/default/objects/Bulk_Upload_Field_Mapping__mdt/Bulk_Upload_Field_Mapping__mdt.object-meta.xml
<CustomObject>
    <label>Bulk Upload Field Mapping</label>
    <pluralLabel>Bulk Upload Field Mapping</pluralLabel>
</CustomObject>