force-app/main/default/objects/Bulk_Upload_Field_Mapping__mdt/fields/Field_Format__c.field-meta.xml
<CustomField>
    <fullName>Field_Format__c</fullName>
    <label>Field Format</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>MM/DD/YYYY</fullName>
                <default>true</default>
                <label>MM/DD/YYYY</label>
            </value>
            <value>
                <fullName>DD/MM/YYYY</fullName>
            </value>
            <value>
                <fullName>MM-DD-YYYY</fullName>
            </value>
            <value>
                <fullName>DD-MM-YYYY</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>