force-app/main/default/objects/Bulk_Upload_Field_Mapping__mdt/fields/Field_Name__c.field-meta.xml
<CustomField>
    <fullName>Field_Name__c</fullName>
    <label>Field Name</label>
    <length>200</length>
    <required>true</required>
    <type>Text</type>
</CustomField>