force-app/main/default/objects/Bulk_Upload_Field_Mapping__mdt/fields/Is_Address_Field__c.field-meta.xml
<CustomField>
    <fullName>Is_Address_Field__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used to check if prefix needed for Field API Name (either Billing or Mailing)</description>
    <label>Is Address Field</label>
    <type>Checkbox</type>
</CustomField>