force-app/main/default/objects/Bulk_Upload_Field_Mapping__mdt/fields/Is_Negative__c.field-meta.xml
<CustomField>
    <fullName>Is_Negative__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checks if negative values are allowed.</description>
    <label>Is Negative</label>
    <type>Checkbox</type>
</CustomField>