force-app/main/default/objects/Bulk_Upload_Field_Mapping__mdt/fields/Is_Required__c.field-meta.xml
<CustomField>
    <fullName>Is_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checks if field is required or not.</description>
    <label>Is Required</label>
    <type>Checkbox</type>
</CustomField>