force-app/main/default/objects/Bulk_Upload_Field_Mapping__mdt/fields/Staging_Field_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Staging_Field_API_Name__c</fullName>
    <label>Staging Field API Name</label>
    <length>200</length>
    <required>true</required>
    <type>Text</type>
</CustomField>