force-app/main/default/objects/Bulk_Upload_Field_Mapping__mdt/listViews/Fields_Mapping.listView-meta.xml
<ListView>
    <fullName>Fields_Mapping</fullName>
    <columns>DeveloperName</columns>
    <columns>Field_Name__c</columns>
    <columns>Staging_SObject_API_Name__c</columns>
    <columns>Staging_Field_API_Name__c</columns>
    <columns>SObject_API_Name__c</columns>
    <columns>Field_API_Name__c</columns>
    <columns>Field_Type__c</columns>
    <columns>Field_Format__c</columns>
    <columns>Is_Address_Field__c</columns>
    <columns>Is_Negative__c</columns>
    <columns>Is_Required__c</columns>
    <columns>Is_Active__c</columns>
    <filterScope>Everything</filterScope>
    <label>Fields Mapping</label>
</ListView>